fix: fix the overflow title in banner

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -32,9 +32,6 @@ html.dark {
     background-color: theme('colors.slate.400');
   }
 }
-body {
-  overflow-x: hidden;
-}
 
 // animations
 @import 'animations/transitions';
